web page filled out with a lot of content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 <body>
 
     <h1>Odin Recipes</h1>
-    
+    <ul>
+        <li>
+            <a href="recipes/applePie.html">Apple Pie</a>
+        </li>
+        <li>
+            <a href="recipes/applePieMoonshine.html">Apple Pie Moonshine (wink wink)</a>
+        </li>
+        <li>
+            <a href="recipes/turboStrongCoffee.html">Turbo Strong Coffee</a>
+        </li>
+    </ul>
+
+
 </body>
 </html>
